--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "engines": {
     "node": "16.13.2",
     "npm": "7.20.5"
-  },  "scripts": {
+  },
+  "scripts": {
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
     "build": "cd client && npm run build",
@@ -14,7 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "compression": "1.7.4",
+    "compression": "^1.7.4",
     "cors": "2.8.5",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
