--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.25.0",
+    "express-sslify": "^1.2.0",
     "firebase": "^9.1.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
